# dastrie

./: COPYING  ChangeLog  Makefile.am  README  autogen.sh  configure.in  dastrie.sln
doc/: doxyfile  header.html
include/: Makefile.am  dastrie.h
sample/: Makefile.am  sample.cpp  sample.vcproj  sample.vcxproj
search/: Makefile.am  search.cpp  search.vcproj  search.vcxproj
test/: Makefile.am  test.cpp  test.vcproj  test.vcxproj
